--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,12 @@
     font-family: 'Poppins';
 }
 
+html, body{
+    position: relative;
+    width: 100%;
+    overflow-x: hidden;
+}
+
 .container{
     margin: 0 1.5rem;
 }
